--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -5741,16 +5741,6 @@
     </div>
 </details>
 
-<!-- II. Yüksek Mahkemeler -->
-<h4 id="yuksek-mahkemeler" class="text-2xl font-bold mt-12 mb-4 text-slate-800 border-b pb-2">
-    II. YÜKSEK MAHKEMELER
-</h4>
-
-<!-- A. Anayasa Mahkemesi -->
-<h5 id="anayasa-mahkemesi" class="text-xl font-semibold mt-8 mb-4 text-slate-700">
-    A. Anayasa Mahkemesi
-</h5>
-
 <!-- Madde 146 -->
 <details id="madde-146" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
     <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
@@ -6079,10 +6069,6 @@
         </div>
     </div>
 </details>
-                <!-- B. Yargıtay -->
-<h5 id="yargitay" class="text-xl font-semibold mt-8 mb-4 text-slate-700">
-    B. Yargıtay
-</h5>
 
 <!-- Madde 154 -->
 <details id="madde-154" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -6122,11 +6108,6 @@
         </div>
     </div>
 </details>
-
-<!-- C. Danıştay -->
-<h5 id="danistay" class="text-xl font-semibold mt-8 mb-4 text-slate-700">
-    C. Danıştay
-</h5>
 
 <!-- Madde 155 -->
 <details id="madde-155" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -6202,11 +6183,6 @@
     </div>
 </details>
 
-                <!-- D. Askeri Yargıtay -->
-<h5 id="askeri-yargitay" class="text-xl font-semibold mt-8 mb-4 text-slate-700">
-    D. Askeri Yargıtay
-</h5>
-
 <!-- Madde 156 -->
 <details id="madde-156" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
     <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800 bg-slate-100 text-slate-500">
@@ -6224,11 +6200,6 @@
     </div>
 </details>
 
-<!-- E. Askeri Yüksek İdare Mahkemesi -->
-<h5 id="askeri-yidare-mahkemesi" class="text-xl font-semibold mt-8 mb-4 text-slate-700">
-    E. Askeri Yüksek İdare Mahkemesi
-</h5>
-
 <!-- Madde 157 -->
 <details id="madde-157" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
     <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800 bg-slate-100 text-slate-500">
@@ -6245,11 +6216,6 @@
         </div>
     </div>
 </details>
-
-<!-- F. Uyuşmazlık Mahkemesi -->
-<h5 id="uyusmazlik-mahkemesi" class="text-xl font-semibold mt-8 mb-4 text-slate-700">
-    F. Uyuşmazlık Mahkemesi
-</h5>
 
 <!-- Madde 158 -->
 <details id="madde-158" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -6285,11 +6251,6 @@
         </div>
     </div>
 </details>
-
-<!-- III. Hakimler ve Savcılar Kurulu -->
-<h4 id="hsk" class="text-2xl font-bold mt-12 mb-4 text-slate-800 border-b pb-2">
-    III. HÂKİMLER VE SAVCILAR KURULU
-</h4>
 
 <!-- Madde 159 -->
 <details id="madde-159" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -6401,11 +6362,6 @@
     </div>
 </details>
 
-<!-- IV. Sayıştay -->
-<h4 id="sayistay" class="text-2xl font-bold mt-12 mb-4 text-slate-800 border-b pb-2">
-    IV. SAYIŞTAY
-</h4>
-
 <!-- Madde 160 -->
 <details id="madde-160" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
     <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
@@ -6475,7 +6431,146 @@
         </div>
     </div>
 </details>
+<!-- Bölüm Özeti -->
+<div class="mt-16 p-6 bg-green-100 rounded-lg border-l-4 border-green-600 highlight-box" role="mark">
+    <h4 class="font-bold text-green-800 text-xl mb-3 flex items-center">
+        <span class="mr-3 text-2xl">✅</span> Yargı - Bölüm Özeti
+    </h4>
+    <p class="text-green-900 mb-4" style="text-align: justify;">
+        Bu bölümde, devletin üçüncü temel erki olan Yargı'nın anayasal temellerini, bağımsızlık güvencelerini ve en üst organları olan Yüksek Mahkemeleri inceledik.
+    </p>
+    <ul class="list-none space-y-3">
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">🛡️</span>
+            <div>
+                <strong>Temel İlkeler:</strong> Yargının temelini <strong>mahkemelerin bağımsızlığı (Md. 138)</strong> ve <strong>hâkimlik teminatı (Md. 139)</strong> oluşturur. Hiç kimse mahkemelere emir veremez, hâkimler azledilemez ve kararlarına tüm organlar uymak zorundadır. Yargılamanın temel usul kuralları ise duruşmaların açık olması (aleniyet), kararların gerekçeli olması ve davaların süratle sonuçlandırılmasıdır (Md. 141).
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">🏛️</span>
+            <div>
+                <strong>Anayasa Mahkemesi (AYM):</strong> <strong>15 üyeden</strong> oluşur (3'ünü TBMM, 12'sini Cumhurbaşkanı seçer). Üyeler <strong>12 yıl</strong> için seçilir ve 65 yaşında emekli olurlar. Üç temel görevi vardır:
+                <ul class="list-disc pl-5 mt-1">
+                    <li><strong>Norm Denetimi:</strong> Kanun, CBK ve İçtüzüğün Anayasa'ya uygunluğunu denetler (OHAL CBK'ları hariç). Esas denetimi için dava süresi 60, şekil için 10 gündür.</li>
+                    <li><strong>Bireysel Başvuru:</strong> Tüm iç hukuk yolları tüketildiğinde temel hak ihlali iddialarını inceler.</li>
+                    <li><strong>Yüce Divan:</strong> En üst düzey devlet görevlilerini yargılar.</li>
+                </ul>
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">⚖️</span>
+            <div>
+                <strong>Diğer Yüksek Mahkemeler:</strong> <strong>Yargıtay</strong> adli yargının, <strong>Danıştay</strong> ise idari yargının temyiz merciidir. <strong>Uyuşmazlık Mahkemesi</strong> ise iki yargı kolu arasındaki uyuşmazlıkları çözer ve başkanını <strong>Anayasa Mahkemesi</strong> görevlendirir.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">📋</span>
+            <div>
+                <strong>Hâkimler ve Savcılar Kurulu (HSK):</strong> Yargı teşkilatının idari organıdır. <strong>13 üyeden</strong> oluşur (Başkanı Adalet Bakanı'dır). Hâkim ve savcıların tüm özlük işlerini yürütür. Kararlarından sadece <strong>"meslekten çıkarma"</strong> cezasına karşı yargı yolu açıktır.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">📊</span>
+            <div>
+                <strong>Sayıştay:</strong> <strong>TBMM adına</strong> mali denetim yapar, kararları kesindir ve bu kararlara karşı idari yargı yolu kapalıdır. Vergi konularında Danıştay ile uyuşmazlığa düşerse, <strong>Danıştay kararı</strong> esas alınır.
+            </div>
+        </li>
+    </ul>
+</div>
 
+<!-- Hafıza Teknikleri ve Kritik Sayılar Özeti -->
+<div class="mt-12 p-6 bg-blue-50 rounded-lg border-l-4 border-blue-500">
+    <h4 class="font-bold text-blue-800 text-xl mb-3 flex items-center">
+        <span class="mr-3 text-2xl">🧠</span> Bu Bölümün Sınav Şifreleri
+    </h4>
+    <div class="grid md:grid-cols-2 gap-x-8 gap-y-4">
+        <div>
+            <h5 class="font-semibold text-blue-900 mb-2">Sayısal Şifreler:</h5>
+            <ul class="list-disc pl-5 space-y-1 text-sm text-blue-900">
+                <li><strong>15:</strong> Anayasa Mahkemesi üye sayısı.</li>
+                <li><strong>13:</strong> HSK üye sayısı.</li>
+                <li><strong>12 Yıl:</strong> AYM üyesinin görev süresi.</li>
+                <li><strong>65 Yaş:</strong> Hâkim-savcı ve AYM üyesi emeklilik yaşı.</li>
+                <li><strong>60 Gün:</strong> AYM'de esas yönünden iptal davası açma süresi.</li>
+                <li><strong>10 Gün:</strong> AYM'de şekil yönünden iptal davası açma süresi.</li>
+                <li><strong>10 Yıl:</strong> AYM'nin reddettiği bir kanun hükmü için tekrar başvuru yasağı.</li>
+                <li><strong>5 Ay:</strong> AYM'nin somut norm denetimi başvurusunu karara bağlama süresi.</li>
+            </ul>
+        </div>
+        <div>
+            <h5 class="font-semibold text-blue-900 mb-2">Kritik Kavramlar:</h5>
+            <ul class="list-disc pl-5 space-y-1 text-sm text-blue-900">
+                <li><strong>Soyut Norm Denetimi (İptal Davası):</strong> "Dört Büyükler"in doğrudan AYM'ye gitmesi.</li>
+                <li><strong>Somut Norm Denetimi (İtiraz Yolu):</strong> Davaya bakan mahkemenin AYM'ye gitmesi.</li>
+                <li><strong>Yargıtay (Adli)</strong> vs. <strong>Danıştay (İdari):</strong> Temel ayrım ve üye seçimlerindeki fark.</li>
+                <li><strong>HSK Kararları:</strong> Sadece <strong>İHRAÇ</strong> kararına dava açılabilir.</li>
+                <li><strong>Sayıştay</strong> vs. <strong>Danıştay:</strong> Vergi konusunda uyuşmazlık çıkarsa Danıştay kararı geçerlidir.</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!-- Bölüm Sonu Testi -->
+<div class="mt-12 p-6 bg-sky-50 border-t-4 border-sky-500 rounded-lg strategy-box" role="region">
+    <h4 class="font-bold text-sky-900 text-xl mb-4 flex items-center">
+        <span class="mr-3 text-2xl">🧪</span> Yargı - Tekrar Testi
+    </h4>
+    <div class="space-y-6">
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">1.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Çoktan Seçmeli</div></div>
+            <p class="text-slate-700 mb-3 text-lg">1982 Anayasası'na göre, Uyuşmazlık Mahkemesi Başkanını kim görevlendirir?</p>
+            <div class="text-slate-600 space-y-2">
+                <div class="flex items-center"><span class="mr-3 font-bold">a)</span> Cumhurbaşkanı</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">b)</span> Hâkimler ve Savcılar Kurulu</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">c)</span> Uyuşmazlık Mahkemesi Genel Kurulu</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">d)</span> Anayasa Mahkemesi</div>
+            </div>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">2.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Boşluk Doldurma</div></div>
+            <p class="text-slate-700 text-lg">Kanunların şekil bakımından Anayasa'ya aykırılığı iddiasıyla Anayasa Mahkemesi'nde iptal davası açma süresi, kanunun Resmi Gazete'de yayımlanmasından başlayarak ......... gündür.</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">3.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Doğru / Yanlış</div></div>
+            <p class="text-slate-700 text-lg">Olağanüstü hal sırasında çıkarılan Cumhurbaşkanlığı Kararnamelerinin Anayasa'ya aykırılığı iddiasıyla Anayasa Mahkemesi'nde dava açılamaz. (<strong>D / Y</strong>)</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">4.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Kavram Analizi</div></div>
+            <p class="text-slate-700 text-lg">Hâkimler ve Savcılar Kurulu'nun (HSK) bir savcı hakkında verdiği "kınama" disiplin cezasına karşı yargı yolu açık mıdır? Anayasal dayanağı ile açıklayınız.</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">5.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Liste</div></div>
+            <p class="text-slate-700 text-lg">Anayasa Mahkemesi'nin "norm denetimi" görevi dışında kalan iki temel görevini yazınız.</p>
+        </div>
+    </div>
+    <details class="mt-6">
+        <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
+        <div class="mt-3 p-6 bg-slate-50 rounded-lg border border-slate-200">
+            <div class="divide-y divide-slate-200">
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">1</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>d) Anayasa Mahkemesi</strong>.<br><strong>Açıklama:</strong> Madde 158'e göre, Uyuşmazlık Mahkemesi'nin Başkanlığını, Anayasa Mahkemesi'nin kendi üyeleri arasından görevlendirdiği bir üye yapar. Bu, çok özgün ve önemli bir kuraldır.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">2</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>10 (on)</strong>.<br><strong>Açıklama:</strong> Madde 148'e göre, şekil bozukluğuna dayalı iptal davası süresi 10 gün, esas bozukluğuna dayalı iptal davası süresi ise 60 gündür (Md. 151).</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">3</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>Doğru</strong>.<br><strong>Açıklama:</strong> Madde 148'e göre, olağanüstü hallerde ve savaş hallerinde çıkarılan Cumhurbaşkanlığı kararnamelerinin şekil ve esas bakımından Anayasaya aykırılığı iddiasıyla Anayasa Mahkemesinde dava açılamaz.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">4</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> Hayır, yargı yolu <strong>kapalıdır.</strong><br><strong>Açıklama:</strong> Madde 159'a göre, HSK'nın kararlarından sadece "meslekten çıkarma" cezasına karşı yargı yolu açıktır. Kınama, uyarma, atama, nakil gibi diğer tüm kararlarına karşı yargı yolu kapalıdır.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">5</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong><br>1. Bireysel Başvuruları karara bağlamak.<br>2. Yüce Divan sıfatıyla yargılama yapmak.</p></div>
+                </div>
+            </div>
+        </div>
+    </details>
+</div>
 
                 
 </section>
