--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -6571,7 +6571,136 @@
         </div>
     </details>
 </div>
+<!-- Özel Çalışma: Devletin Üç Gücü (Kuvvetler Ayrılığı) Karşılaştırmalı Analizi -->
+<div class="my-16 p-6 md:p-8 bg-slate-50 rounded-2xl border-t-8 border-slate-500 shadow-lg" role="region" aria-labelledby="kuvvetler-ayriligi-analizi">
+    <h3 id="kuvvetler-ayriligi-analizi" class="text-3xl md:text-4xl font-extrabold text-center mb-4 text-slate-800">
+        ÖZEL ÇALIŞMA: CUMHURİYETİN ÜÇ TEMEL ORGANI (YASAMA - YÜRÜTME - YARGI)
+    </h3>
+    <p class="text-center text-slate-700 max-w-3xl mx-auto mb-10">
+        Değerli aday, Yasama, Yürütme ve Yargı bölümlerini tamamladık. Şimdi bu üç temel gücü tek bir potada eritecek, aralarındaki farkları, denge-denetim mekanizmalarını ve sınav tuzaklarını ortaya koyacak en önemli karşılaştırma tablosunu inceliyoruz.
+    </p>
 
+    <div class="highlight-box mt-4 mb-12">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: "DEVLET GEMİSİ" Analojisi</h6>
+        <p style="text-align: justify;" class="text-sm">Anayasamız, devleti üç temel görevi yerine getiren üç ayrı organa (kuvvete) ayırmıştır. Bu sisteme "Kuvvetler Ayrılığı" denir.</p>
+        <ul class="list-none space-y-2 text-sm mt-3">
+            <li class="flex items-start"><span class="mr-3 mt-1">🏛️</span><div><strong>YASAMA (TBMM):</strong> Geminin rotasını çizen kaptandır. Kanunlar yaparak geminin hangi limanlara uğrayacağını, hangi kurallarla hareket edeceğini belirler.</div></li>
+            <li class="flex items-start"><span class="mr-3 mt-1">👤</span><div><strong>YÜRÜTME (Cumhurbaşkanı):</strong> Gemiyi kullanan dümencidir. Kaptanın çizdiği rotaya (kanunlara) uyarak gemiyi yönetir, sevk ve idare eder.</div></li>
+            <li class="flex items-start"><span class="mr-3 mt-1">⚖️</span><div><strong>YARGI (Mahkemeler):</strong> Geminin seyir defterini denetleyen ve kurallar bozulduğunda ceza veren bağımsız denetçidir. Dümencinin, kaptanın çizdiği rotaya uyup uymadığını kontrol eder.</div></li>
+        </ul>
+    </div>
+
+    <!-- BÖLÜM 1: ORGANLARIN KİMLİK KARTLARI -->
+    <div class="mb-12">
+        <h4 class="text-2xl font-bold text-center mb-6 text-slate-800">Bölüm 1: Organların Kimlik Kartları</h4>
+        <div class="overflow-x-auto">
+            <table class="w-full text-sm border-collapse">
+                <thead>
+                    <tr class="bg-slate-100">
+                        <th class="border border-slate-300 p-3 font-semibold text-slate-800">Kriter</th>
+                        <th class="border border-slate-300 p-3 font-semibold text-slate-800">YASAMA</th>
+                        <th class="border border-slate-300 p-3 font-semibold text-slate-800">YÜRÜTME</th>
+                        <th class="border border-slate-300 p-3 font-semibold text-slate-800">YARGI</th>
+                    </tr>
+                </thead>
+                <tbody class="bg-white align-top text-center">
+                    <tr>
+                        <td class="border border-slate-300 p-2 font-medium">Ana Organ</td>
+                        <td class="border border-slate-300 p-2">Türkiye Büyük Millet Meclisi (TBMM)</td>
+                        <td class="border border-slate-300 p-2">Cumhurbaşkanı</td>
+                        <td class="border border-slate-300 p-2">Bağımsız ve Tarafsız Mahkemeler</td>
+                    </tr>
+                    <tr class="bg-slate-50">
+                        <td class="border border-slate-300 p-2 font-medium">Temel Fonksiyonu</td>
+                        <td class="border border-slate-300 p-2">Kural Koymak</td>
+                        <td class="border border-slate-300 p-2">Ülkeyi Yönetmek</td>
+                        <td class="border border-slate-300 p-2">Uyuşmazlıkları Çözmek</td>
+                    </tr>
+                    <tr>
+                        <td class="border border-slate-300 p-2 font-medium">Meşruiyet Kaynağı</td>
+                        <td class="border border-slate-300 p-2">Doğrudan Halk (Seçim)</td>
+                        <td class="border border-slate-300 p-2">Doğrudan Halk (Seçim)</td>
+                        <td class="border border-slate-300 p-2">Anayasa ve Kanun (Atama)</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <!-- BÖLÜM 2: FREN VE DENGE MEKANİZMALARI -->
+    <div class="mb-12">
+        <h4 class="text-2xl font-bold text-center mb-6 text-slate-800">Bölüm 2: Fren ve Denge Mekanizmaları (Kim Kimi Nasıl Denetler?)</h4>
+        <p class="text-center text-slate-600 max-w-3xl mx-auto mb-8 text-sm">Bu bölüm, sistemin özünü oluşturur. Hiçbir güç sınırsız değildir ve diğerleri tarafından denetlenir.</p>
+        <div class="space-y-4">
+            <div class="p-4 bg-white rounded-lg border-l-4 border-blue-400 shadow-sm">
+                <h6 class="font-bold text-blue-800">🏛️ Yasamanın ➡️ 👤 Yürütmeyi Denetimi</h6>
+                <ul class="list-disc pl-5 mt-2 space-y-1 text-sm text-slate-700">
+                    <li><strong>Bilgi Alma:</strong> Meclis Araştırması, Genel Görüşme, Yazılı Soru.</li>
+                    <li><strong>Mali Denetim:</strong> Bütçeyi kabul ederek veya reddederek yürütmenin mali planını denetler.</li>
+                    <li><strong>Cezai Sorumluluk:</strong> Meclis Soruşturması ile Cumhurbaşkanı, yardımcıları ve bakanlar için Yüce Divan yolunu açabilir (301➡️360➡️400 formülü).</li>
+                    <li><strong>Seçim Denetimi:</strong> 360 vekil ile seçimlerin yenilenmesine karar vererek hem kendi hem de Cumhurbaşkanının görevini sonlandırabilir.</li>
+                </ul>
+            </div>
+            <div class="p-4 bg-white rounded-lg border-l-4 border-red-400 shadow-sm">
+                <h6 class="font-bold text-red-800">👤 Yürütmenin ➡️ 🏛️ Yasamayı Denetimi</h6>
+                 <ul class="list-disc pl-5 mt-2 space-y-1 text-sm text-slate-700">
+                    <li><strong>Veto Yetkisi:</strong> Kanunları 15 gün içinde geri gönderebilir.</li>
+                    <li><strong>Yargısal Denetim Yolu:</strong> Kanunların iptali için Anayasa Mahkemesi'nde dava açabilir.</li>
+                    <li><strong>Seçim Denetimi:</strong> Seçimlerin yenilenmesine karar vererek hem Meclis'in hem de kendisinin görevini sonlandırabilir.</li>
+                 </ul>
+            </div>
+             <div class="p-4 bg-white rounded-lg border-l-4 border-green-400 shadow-sm">
+                <h6 class="font-bold text-green-800">⚖️ Yargının ➡️ Yasamayı ve Yürütmeyi Denetimi</h6>
+                 <ul class="list-disc pl-5 mt-2 space-y-1 text-sm text-slate-700">
+                     <li><strong>Anayasa Mahkemesi:</strong> Kanunları, CBK'ları ve TBMM İçtüzüğü'nü Anayasa'ya uygunluk yönünden denetler (Anayasallık Denetimi).</li>
+                     <li><strong>Danıştay ve İdari Yargı:</strong> Yürütmenin her türlü eylem ve işleminin hukuka uygunluğunu denetler.</li>
+                     <li><strong>Yüce Divan (AYM):</strong> Cumhurbaşkanı, yardımcıları ve bakanları görev suçlarından dolayı yargılar.</li>
+                 </ul>
+            </div>
+             <div class="p-4 bg-white rounded-lg border-l-4 border-purple-400 shadow-sm">
+                <h6 class="font-bold text-purple-800">Yasama ve Yürütmenin ➡️ ⚖️ Yargıya Etkisi</h6>
+                 <ul class="list-disc pl-5 mt-2 space-y-1 text-sm text-slate-700">
+                    <li><strong>Yargıyı Şekillendirme:</strong> TBMM ve Cumhurbaşkanı, HSK ve AYM'ye üye seçerek yargının oluşumunda rol oynar.</li>
+                    <li><strong>Yargı Kararlarını Etkileme:</strong> TBMM, af kanunu çıkararak kesinleşmiş mahkeme kararlarının sonuçlarını ortadan kaldırabilir.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    
+    <!-- BÖLÜM 3: "ALTIN" BİLGİLER -->
+    <div class="mt-12">
+        <h4 class="text-2xl font-bold text-center mb-6 text-slate-800">Bölüm 3: Üç Bölümün "Altın" Bilgileri</h4>
+        <div class="grid md:grid-cols-2 gap-6">
+            <div class="p-4 bg-white rounded-lg border border-slate-200 shadow-sm">
+                 <h6 class="font-bold text-slate-800 mb-2">Kritik Kurullar ve Üye Seçimleri:</h6>
+                 <ul class="list-disc pl-5 space-y-1 text-sm text-slate-700">
+                    <li><strong>RTÜK (9 Üye):</strong> Tamamını <strong>TBMM</strong> seçer.</li>
+                    <li><strong>AYM (15 Üye):</strong> 12'sini <strong>Cumhurbaşkanı</strong>, 3'ünü <strong>TBMM</strong> seçer.</li>
+                    <li><strong>HSK (13 Üye):</strong> 4'ünü <strong>Cumhurbaşkanı</strong>, 7'sini <strong>TBMM</strong> seçer (Başkan ve doğal üye hariç).</li>
+                </ul>
+            </div>
+             <div class="p-4 bg-white rounded-lg border border-slate-200 shadow-sm">
+                 <h6 class="font-bold text-slate-800 mb-2">Nitelikli Çoğunluklar Şeması:</h6>
+                 <ul class="list-disc pl-5 space-y-1 text-sm text-slate-700">
+                    <li><strong>Af İlanı (TBMM):</strong> 360 Oy (3/5)</li>
+                    <li><strong>Seçimlerin Yenilenmesi (TBMM):</strong> 360 Oy (3/5)</li>
+                    <li><strong>Cumhurbaşkanı Vetosunu Aşma (TBMM):</strong> 301 Oy (Salt Çoğunluk)</li>
+                    <li><strong>Meclis Soruşturması:</strong> 301 (İstem) ➡️ 360 (Açma) ➡️ 400 (Yüce Divan)</li>
+                </ul>
+            </div>
+        </div>
+        <div class="p-4 bg-white rounded-lg border border-slate-200 shadow-sm mt-6">
+            <h6 class="font-bold text-slate-800 mb-2">Yargı Yolu Kapalı Olan Kilit İşlemler:</h6>
+            <ul class="list-disc pl-5 space-y-1 text-sm text-slate-700">
+                <li>YSK Kararları</li>
+                <li>HSK'nın <strong>Meslekten Çıkarma Dışındaki</strong> Kararları</li>
+                <li>Sayıştay Kararları (İdari yargı yolu kapalı)</li>
+                <li>YAŞ'ın <strong>Terfi</strong> ve <strong>Kadrosuzluktan Emekliye Ayırma</strong> Kararları</li>
+                <li>Usulüne Uygun Yürürlüğe Girmiş Milletlerarası Antlaşmalar</li>
+            </ul>
+        </div>
+    </div>
+</div>
                 
 </section>
  
