--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -6701,6 +6701,135 @@
         </div>
     </div>
 </div>
+                <!-- DÖRDÜNCÜ KISIM: MALİ VE EKONOMİK HÜKÜMLER -->
+<h2 id="dorduncu-kisim" class="section-title mt-16 mb-6">
+    DÖRDÜNCÜ KISIM: MALİ VE EKONOMİK HÜKÜMLER
+</h2>
+<div class="highlight-box mt-4 mb-8">
+    <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Kısım Analizi</h6>
+    <p style="text-align: justify;" class="text-sm">Değerli aday, bu bölüm, devletin vatandaştan topladığı vergileri ve diğer gelirleri, yine vatandaşın hizmeti için nasıl planlayacağını (Bütçe), harcayacağını ve bu harcamaların hesabını nasıl vereceğini (Kesinhesap) düzenler. Bu, devletin mali disiplininin ve şeffaflığının anayasal temelidir.</p>
+</div>
+
+<!-- BİRİNCİ BÖLÜM: Mali Hükümler -->
+<section aria-labelledby="bolum-mali-hukumler">
+    <h3 id="bolum-mali-hukumler" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        BİRİNCİ BÖLÜM: Mali Hükümler
+    </h3>
+    
+    <!-- I. Bütçe -->
+    <h4 id="butce" class="text-xl font-semibold mt-8 mb-4 text-slate-700">
+        I. Bütçe
+    </h4>
+
+    <!-- Madde 161 -->
+    <details id="madde-161" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 161 – Bütçe ve Kesinhesap
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Kamu idarelerinin ve kamu iktisadî teşebbüsleri dışındaki kamu tüzel kişilerinin harcamaları <strong>yıllık bütçelerle yapılır.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Malî yıl başlangıcı ile merkezi yönetim bütçesinin hazırlanması, uygulanması ve kontrolü ile yatırımlar veya bir yıldan fazla sürecek iş ve hizmetler için özel süre ve usuller kanunla düzenlenir. <strong>Bütçe kanununa, bütçe ile ilgili hükümler dışında hiçbir hüküm konulamaz.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Cumhurbaşkanı</strong> bütçe kanun teklifini, malî yılbaşından <strong>en az yetmişbeş gün önce,</strong> Türkiye Büyük Millet Meclisine sunar. Bütçe teklifi <strong>Bütçe Komisyonunda</strong> görüşülür. Komisyonun <strong>ellibeş gün içinde</strong> kabul edeceği metin Genel Kurulda görüşülür ve <strong>malî yılbaşına kadar</strong> karara bağlanır.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Bütçe kanununun süresinde yürürlüğe konulamaması halinde, <strong>geçici bütçe kanunu çıkarılır.</strong> Geçici bütçe kanununun da çıkarılamaması durumunda, yeni bütçe kanunu kabul edilinceye kadar <strong>bir önceki yılın bütçesi yeniden değerleme oranına göre artırılarak uygulanır.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Türkiye Büyük Millet Meclisi üyeleri, Genel Kurulda kamu idare bütçeleri hakkında düşüncelerini her bütçenin görüşülmesi sırasında açıklarlar, <strong>gider artırıcı veya gelirleri azaltıcı önerilerde bulunamazlar.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Genel Kurulda kamu idare bütçeleri ile değişiklik önergeleri, üzerinde ayrıca görüşme yapılmaksızın okunur ve oylanır.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Merkezî yönetim bütçesiyle verilen ödenek, harcanabilecek tutarın sınırını gösterir. Harcanabilecek tutarın Cumhurbaşkanlığı kararnamesiyle aşılabileceğine dair bütçe kanununa hüküm konulamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Carî yıl bütçesindeki ödenek artışını öngören değişiklik teklifleri ile carî ve izleyen yılların bütçelerine malî yük getiren tekliflerde, <strong>öngörülen giderleri karşılayabilecek malî kaynak gösterilmesi zorunludur.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Merkezî yönetim kesinhesap kanunu teklifi, ilgili olduğu malî yılın sonundan başlayarak <strong>en geç altı ay sonra</strong> Cumhurbaşkanı tarafından Türkiye Büyük Millet Meclisine sunulur. <strong>Sayıştay</strong> genel uygunluk bildirimini, ilişkin olduğu kesinhesap kanun teklifinin verilmesinden başlayarak <strong>en geç yetmişbeş gün içinde</strong> Meclise sunar.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Kesinhesap kanunu teklifi ve genel uygunluk bildiriminin Türkiye Büyük Millet Meclisine verilmiş olması, ilgili yıla ait Sayıştayca sonuçlandırılamamış denetim ve hesap yargılamasını önlemez ve bunların karara bağlandığı anlamına gelmez.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Kesinhesap kanunu teklifi, yeni yıl bütçe kanunu teklifiyle birlikte görüşülür ve karara bağlanır.</strong>
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+                <p style="text-align: justify;" class="text-sm">2017 değişikliği ile tüm bütçe süreci bu tek ve kapsamlı maddede toplanmıştır. Bu madde, devletin bir sonraki yılın "gelir-gider tablosunu" nasıl hazırlayıp onayladığını (Bütçe) ve bir önceki yılın hesabını nasıl verdiğini (Kesinhesap) anlatır.</p>
+            </div>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Bütçe Kanununun Serüveni (Takvimli Yol Haritası)</h6>
+                <ol class="list-decimal pl-5 text-sm space-y-2">
+                    <li><strong>Teklifin Sunulması (Yürütme):</strong> Cumhurbaşkanı, bütçe kanun teklifini, mali yılbaşından (1 Ocak) <strong>en az 75 gün önce</strong> TBMM'ye sunar.</li>
+                    <li><strong>Komisyon Aşaması (Yasama):</strong> Teklif, TBMM Bütçe Komisyonu'nda görüşülür. Komisyonun bu metni kabul etmek için <strong>55 günlük</strong> bir süresi vardır.</li>
+                    <li><strong>Genel Kurul Aşaması (Yasama):</strong> Komisyondan geçen metin, TBMM Genel Kurulu'nda görüşülür ve <strong>mali yılbaşına kadar</strong> karara bağlanır.</li>
+                </ol>
+            </div>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Bütçenin Özel Kuralları ve Yasakları</h6>
+                <ul class="list-disc pl-5 text-sm space-y-2">
+                    <li><strong>Bütçe Kanunu Veto Edilemez:</strong> Hatırlatma! Madde 89'a göre Cumhurbaşkanı'nın bütçe kanununu geri gönderme (veto etme) yetkisi yoktur.</li>
+                    <li><strong>"Torba Kanun" Yasağı:</strong> Bütçe kanununa, bütçe ile ilgisi olmayan hiçbir hüküm konulamaz.</li>
+                    <li><strong>Vekillerin Sınırı:</strong> Milletvekilleri, bütçe görüşmeleri sırasında <strong>gider artırıcı veya gelirleri azaltıcı önerilerde bulunamazlar.</strong> Bu, bütçe disiplinini korumak için çok önemli bir kuraldır.</li>
+                </ul>
+            </div>
+             <div class="warning-box mt-4">
+                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Peki, Bütçe Süresinde Kabul Edilmezse Ne Olur?</h6>
+                 <ul class="list-disc pl-5 text-sm space-y-2">
+                    <li><strong>Plan B:</strong> Geçici bütçe kanunu çıkarılır.</li>
+                    <li><strong>Plan C:</strong> Eğer geçici bütçe de çıkarılamazsa, yeni bütçe kabul edilene kadar <strong>bir önceki yılın bütçesi, yeniden değerleme oranında artırılarak uygulanır.</strong> Devletin harcamaları asla durmaz.</li>
+                </ul>
+            </div>
+            <div class="highlight-box mt-4">
+                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">📊</span>Kesinhesap Kanunu (Geçmiş Yılın Karnesi):</h6>
+                 <ul class="list-disc pl-5 text-sm space-y-2">
+                    <li><strong>Sunulması:</strong> Bir önceki yılın kesinhesap kanunu teklifi, ilgili mali yılın bitiminden sonra <strong>en geç 6 ay içinde</strong> Cumhurbaşkanı tarafından TBMM'ye sunulur.</li>
+                    <li><strong>Sayıştay'ın Rolü:</strong> Sayıştay, bu teklifin Meclis'e sunulmasından itibaren <strong>en geç 75 gün içinde</strong> "genel uygunluk bildirimi"ni (yani denetim raporunu) TBMM'ye sunar.</li>
+                    <li><strong>Görüşülmesi:</strong> Kesinhesap (geçmişin hesabı), yeni yılın bütçesiyle (geleceğin planı) <strong>birlikte görüşülür ve karara bağlanır.</strong> Bu, geçmiş performansı görerek geleceği planlama imkanı verir.</li>
+                </ul>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 162, 163, 164 -->
+    <details id="madde-162-164" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800 bg-slate-100 text-slate-500">
+            <span class="mr-3 text-xl">📘</span> Madde 162, 163, 164 – (Mülga)
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                (Mülga: 21/1/2017-6771/16 md.)
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+                <p style="text-align: justify;" class="text-sm">Bu maddeler (Bütçenin görüşülmesi, Bütçelerde değişiklik, Kesinhesap), eski sistemdeki detaylı usulleri içeriyordu. <strong>2017 değişikliği ile tüm bu süreçler yeni Madde 161'de birleştirildiği için bu maddelerin tamamı yürürlükten kaldırılmıştır (Mülga edilmiştir).</strong></p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 165 -->
+    <details id="madde-165" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 165 – Kamu İktisadi Teşebbüslerinin Denetimi (KİT)
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Sermayesinin yarısından fazlası doğrudan doğruya veya dolaylı olarak Devlete ait olan kamu kuruluş ve ortaklıklarının <strong>Türkiye Büyük Millet Meclisince denetlenmesi</strong> esasları <strong>kanunla düzenlenir.</strong>
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+                <p style="text-align: justify;" class="text-sm">Bu madde, sermayesinin yarısından fazlası devlete ait olan kamu kuruluş ve ortaklıklarının (KİT'lerin) denetimini düzenler. Bu denetimin temel sahibi, millet adına <strong>Türkiye Büyük Millet Meclisi'dir.</strong> Denetimin usul ve esasları ise kanunla düzenlenir. Bu denetimi TBMM adına fiilen yapan kurum genellikle Sayıştay'dır.</p>
+            </div>
+        </div>
+    </details>
+</section>
                 
 </section>
  
